# rmux-demos

./: .gitignore  README.fr.md  README.ja.md  README.md  README.zh-CN.md
broadcast-demo/: Cargo.toml  README.fr.md  README.ja.md  README.md  README.zh-CN.md
broadcast-demo/src/: main.rs
codex-as-leader/: AGENTS.md  README.md  launch.sh
codex-as-leader/tests/: launch_leader_command_test.sh
demo-orchestration/: CLAUDE.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  launch.cmd  launch.ps1  launch.sh
mini-zellij/: Cargo.toml  README.fr.md  README.ja.md  README.md  README.zh-CN.md
mini-zellij/src/: main.rs
terminal-playwright-demo/: Cargo.toml  README.fr.md  README.ja.md  README.md  README.zh-CN.md
terminal-playwright-demo/src/: main.rs
web-claude-demo/: Cargo.toml  README.fr.md  README.ja.md  README.md  README.zh-CN.md
web-claude-demo/src/: main.rs
web-claude-demo/static/: index.html
