[package]
name = "terminal-playwright-demo"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "=0.29.0", default-features = false, features = ["crossterm"] }
rmux-sdk = { git = "https://github.com/Helvesec/rmux" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
