[package]
name = "web-claude-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
rmux-sdk = { git = "https://github.com/Helvesec/rmux" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
